# DA

./: Cargo.toml  README.md
frida/: Cargo.toml
frida/benches/: frida.rs
frida/src/: lib.rs
util/: Cargo.toml
util/benches/: fft.rs
util/src/: lib.rs  merkle_tree.rs  mul_group.rs
veri_rs/: Cargo.toml
veri_rs/benches/: consolidation.rs  kzg.rs
veri_rs/src/: consolidation.rs  lib.rs  poly.rs
