[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = { version = "^0.4.0", default-features = false }
ark-bn254 = "0.4"
rand = "0.8.5"
rs_merkle = "1.4"
ark-serialize = "0.4"
blake3 = "1.5"

[[bench]]
name = "fft"
harness = false
