[package]
name = "veri_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-bn254 = "0.4"
rand = "0.8.5"
ark-serialize = "0.4"
csv = "1.3.0"
util = { path = "../util" }
ark-std = "0.4"
ark-poly = { version = "^0.4.0", default-features = false }
hp = { git = "https://github.com/EspressoSystems/hyperplonk.git", package = "subroutines" }

[[bench]]
name = "consolidation"
harness = false

[[bench]]
name = "kzg"
harness = false
